<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat</string>
    <string name="menu_disconnect">Disconnect</string>

    <string name="hint_uid">uid</string>
    <string name="hint_display_name">display name</string>
    <string name="btn_connection">Connect</string>

    <string name="error_title">Configuration error</string>
    <string name="error_message"><b>APP_ID</b> and <b>AUTH_URL</b> variables must be set in the <b><i>Config.java</i></b> file.</string>

    <string name="label_chat_empty">Empty chat…</string>
    <string name="hint_chat_uid">To</string>
    <string name="hint_chat_message">Message</string>
    <string name="btn_chat_send">Send</string>

</resources>
