<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_connection_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_uid"
            android:singleLine="true"
            android:ems="10" />

        <EditText
            android:id="@+id/txt_connection_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_display_name"
            android:singleLine="true"
            android:ems="10" />

        <Button
            android:id="@+id/btn_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_connection" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="middle"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_chat"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:transcriptMode="normal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/list_chat_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_chat_empty" />

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal|bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_chat_uid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_chat_uid"
                    android:singleLine="true"
                    android:ems="10" />

                <EditText
                    android:id="@+id/txt_chat_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_chat_message"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:ems="10" />
            </LinearLayout>

            <Button
                android:id="@+id/send_message_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_chat_send" />

        </LinearLayout>

    </LinearLayout>

</merge>
